--- a/star-wars-planet-api/src/test/resources/application-it.properties
+++ b/star-wars-planet-api/src/test/resources/application-it.properties
@@ -1,9 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=${MYSQL_HOST:jdbc:mysql://localhost/starwars?createDatabaseIfNotExist=true&useSSL=false}
-spring.datasource.username=${MYSQL_USERNAME:root}
-spring.datasource.password=${MYSQL_PASSWORD:111093}
-
+spring.datasource.url=jdbc:tc:mysql:8.0:///db?TC_IMAGE_TAG=8.0
 spring.jpa.show-sql=true
 
 
